increase score and game over and touch event fixed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Jump game</h1>
     <h3>Score: <span id="score">0</span></h3>
-    <canvas id="myCanvas" style="border: solid ;"></canvas>
+    <canvas id="myCanvas" width="300px" height="500px" style="border: solid ;"></canvas>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
